<resources>
    <string name="app_name">MuscleDiary</string>

    <!-- SignIn -->
    <string name="login_enter_password">비밀번호를 입력하세요</string>
    <string name="login_enter_email">아이디를 입력하세요</string>
    <string name="login_str_login_btn">로그인</string>
    <string name="login_str_description_sign_up">아직 그뉵일기의 회원이 아니신가요?</string>
    <string name="login_str_sign_up">회원가입</string>

    <!-- SignUp-->
    <string name="sign_up_action_bar_title">회원가입</string>
    <string name="sign_up_str_title_id">아이디</string>
    <string name="sign_up_str_input_id">영문, 숫자 혼합 6-10자</string>
    <string name="sign_up_str_title_password">비밀번호</string>
    <string name="sign_up_str_input_password">영문, 숫자 혼합 8-14자(연속된 4자리 불가)</string>
    <string name="sign_up_str_title_password_re">비밀번호 재입력</string>
    <string name="sign_up_str_input_password_re">비밀번호 재입력</string>
    <string name="sign_up_btn_title">입력 완료</string>

    <!-- Excercise fragment -->
    <string name="fragment_excercise_title">운동</string>

    <!-- Food fragment -->
    <string name="fragment_food_title">음식&amp;칼로리</string>

    <!-- Chart fragment -->
    <string name="chart_type">분석종류 변경</string>
    <string name="chart_term">기간설정</string>
    <string name="chart_title">체중기록</string>

    <!-- Setting fragment -->
    <string name="fragment_setting_title">설정</string>
    <string name="setting_weight_goal">체중목표</string>
    <string name="setting_kcal_goal">영양목표</string>
    <string name="setting_food">식사 종류 설정</string>
    <string name="setting_start_weight">시작체중 - </string>
    <string name="setting_now_weight">현재체중 - </string>
    <string name="setting_goal_weight">목표체중 - </string>
    <string name="setting_week_weight">주간목표 - 매주 </string>
    <string name="setting_kg">Kg</string>
    <string name="setting_sign_out">로그아웃</string>

    <!--setting input activity-->
    <string name="input_setting_hint">추가하고 싶은 끼니를 입력하세요.</string>

    <!--setting dialog-->
    <string name="cancle">취소</string>
    <string name="select">완료</string>
    <string name="dot">.</string>

    <!--setting age activity-->
    <string name="setting_age">생년월일 설정</string>

    <!--setting gender activity-->
    <string name="setting_gender">성별 선택</string>
    <string name="setting_gender_male">남성</string>
    <string name="setting_gender_female">여성</string>

    <!--setting height activity-->
    <string name="setting_height">키 설정</string>
    <string name="setting_height_cm">cm</string>

    <!--setting weight activity-->
    <string name="setting_weight">몸무게 설정</string>
    <string name="setting_weight_kg">kg</string>


    <!-- Config String -->
    <string name="loading">로딩중입니다.</string>
    <string name="network_error">네트워크 연결이 원활하지 않습니다.</string>
    <string name="chart_input_str_input_data">날짜와 수치를 입력하세요</string>
    <string name="chart_input_str_complete">입력완료</string>
    <string name="fragment_exercise_title">운동일지</string>
    <string name="food_serving">인분</string>
    <string name="string_food_add_list_input_menu">추가한음식</string>

</resources>
