<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/sign_up_tool_bar"
        android:background="@android:color/white"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up_action_bar_title"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark"/>

        <ImageButton
            android:id="@+id/sign_up_btn_back"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/sign_up_btn_back"
            android:background="@android:color/transparent"
            android:scaleType="fitCenter"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true"/>


    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/sign_up_tool_bar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@android:color/white">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="30dp"
                android:text="@string/sign_up_str_title_id"
                android:textColor="@color/colorPrimaryDark" />

            <LinearLayout
                android:background="@drawable/sign_in_stroke_all_round_box"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="25dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="25dp">

                <EditText
                    android:id="@+id/sign_in_et_id"
                    android:background="@android:color/transparent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/sign_up_str_input_id"
                    android:layout_marginStart="10dp"
                    android:layout_gravity="center_vertical"
                    android:textSize="15sp" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="30dp"
                android:text="@string/sign_up_str_title_password"
                android:textColor="@color/colorPrimaryDark"/>

            <LinearLayout
                android:background="@drawable/sign_in_stroke_all_round_box"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="25dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="25dp">

                <EditText
                    android:id="@+id/sign_in_et_pw"
                    android:background="@android:color/transparent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/sign_up_str_input_password"
                    android:inputType="textPassword"
                    android:layout_marginStart="10dp"
                    android:layout_gravity="center_vertical"
                    android:textSize="15sp" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="30dp"
                android:text="@string/sign_up_str_title_password_re"
                android:textColor="@color/colorPrimaryDark"/>

            <LinearLayout
                android:background="@drawable/sign_in_stroke_all_round_box"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="25dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="25dp">

                <EditText
                    android:inputType="textPassword"
                    android:background="@android:color/transparent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/sign_up_str_input_password_re"
                    android:layout_marginStart="10dp"
                    android:layout_gravity="center_vertical"
                    android:textSize="15sp" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>



    <Button
        android:id="@+id/sign_up_btn_complete"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@color/colorPrimaryDark"
        android:layout_alignParentBottom="true"
        android:text="@string/sign_up_btn_title"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"
        android:textSize="17sp"/>

</RelativeLayout>