<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#00E4E4E4">

    <Button
        android:id="@+id/bt_back_gender_setting"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@android:color/transparent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/layout_gender_setting"/>



    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_gender_setting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/chart_input_back"
        app:layout_constraintTop_toBottomOf="@id/bt_back_gender_setting"
        app:layout_constraintBottom_toBottomOf="parent">
        <TextView
            android:id="@+id/tv_gender_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/setting_gender"
            android:textStyle="bold"
            android:layout_marginStart="5dp"
            android:textSize="23sp"
            android:textColor="@color/colorPrimaryDark"
            app:layout_constraintTop_toTopOf="parent"/>

        <RadioGroup
            android:id="@+id/radiogroup_gender_setting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_gender_title">
            <RadioButton
                android:id="@+id/radio_male_setting"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="3dp"
                android:layout_marginStart="15dp"
                android:buttonTint="@color/colorPrimaryDark"
                android:text="@string/setting_gender_male"
                android:textColor="@color/colorPrimaryDark"/>
            <RadioButton
                android:id="@+id/radio_female_setting"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="3dp"
                android:layout_marginStart="15dp"
                android:buttonTint="@color/colorPrimaryDark"
                android:text="@string/setting_gender_female"
                android:textColor="@color/colorPrimaryDark"/>


        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/radiogroup_gender_setting"
            app:layout_constraintBottom_toBottomOf="parent">

            <Button
                style="?android:attr/borderlessButtonStyle"
                android:id="@+id/bt_cancle_gender"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/cancle"
                android:textColor="@color/colorPrimaryDark"
                android:clickable="true"
                android:focusable="true"/>

            <View
                android:layout_width="1dp"
                android:layout_marginVertical="10dp"
                android:layout_height="match_parent"
                android:background="@color/colorPrimaryDark"/>

            <Button
                style="?android:attr/borderlessButtonStyle"
                android:id="@+id/bt_select_gender"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/select"
                android:textColor="@color/colorPrimaryDark"
                android:clickable="true"
                android:focusable="true"/>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>