<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark">

    <ImageView
        android:id="@+id/login_logo"
        android:layout_width="350dp"
        android:layout_height="260dp"
        android:scaleType="centerCrop"
        android:src="@drawable/logo"
        app:layout_constraintBottom_toTopOf="@id/login_id"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="50dp"/>


    <EditText
        android:id="@+id/login_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/login_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_logo"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="80dp"
        android:inputType="textEmailAddress"

        android:hint="@string/login_enter_email"
        android:textColor="@color/colorAccent"/>

    <EditText
        android:id="@+id/login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/login_btn_login"
        app:layout_constraintTop_toBottomOf="@id/login_id"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="80dp"
        android:inputType="textPassword"

        android:hint="@string/login_enter_password"
        android:textColor="@color/colorAccent"/>

    <Button
        android:id="@+id/login_btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:text="@string/login_str_login_btn"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_password"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="120dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>