<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#00E4E4E4">

    <Button
        android:id="@+id/bt_back_height_setting"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@android:color/transparent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/layout_height_setting"/>



    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_height_setting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/chart_input_back"
        app:layout_constraintTop_toBottomOf="@id/bt_back_height_setting"
        app:layout_constraintBottom_toBottomOf="parent">
        <TextView
            android:id="@+id/tv_height_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/setting_height"
            android:textSize="23sp"
            android:textColor="@color/colorPrimaryDark"
            app:layout_constraintTop_toTopOf="parent"/>


        <NumberPicker
            android:id="@+id/picker_integer_height_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.PickerDate"
            android:layout_marginStart="50dp"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintTop_toBottomOf="@id/tv_height_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/tv_dot_height_setting"/>

        <TextView
            android:id="@+id/tv_dot_height_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/dot"
            android:textSize="18sp"
            android:textColor="@color/colorPrimaryDark"
            app:layout_constraintTop_toTopOf="@id/picker_integer_height_setting"
            app:layout_constraintBottom_toBottomOf="@id/picker_integer_height_setting"
            app:layout_constraintStart_toEndOf="@id/picker_integer_height_setting"
            app:layout_constraintEnd_toStartOf="@id/picker_float_height_setting"/>

        <NumberPicker
            android:id="@+id/picker_float_height_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.PickerDate"
            app:layout_constraintTop_toTopOf="@id/picker_integer_height_setting"
            app:layout_constraintStart_toEndOf="@id/tv_dot_height_setting"
            app:layout_constraintEnd_toStartOf="@id/tv_cm_height_setting"/>

        <TextView
            android:id="@+id/tv_cm_height_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="50dp"
            android:text="@string/setting_height_cm"
            android:textSize="18sp"
            android:textColor="@color/colorPrimaryDark"
            app:layout_constraintTop_toTopOf="@id/picker_integer_height_setting"
            app:layout_constraintBottom_toBottomOf="@+id/picker_integer_height_setting"
            app:layout_constraintStart_toEndOf="@id/picker_float_height_setting"
            app:layout_constraintEnd_toEndOf="parent"/>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/picker_integer_height_setting"
            app:layout_constraintBottom_toBottomOf="parent">

            <Button
                android:id="@+id/bt_cancle_height"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:text="@string/cancle"
                android:textColor="@color/colorPrimaryDark" />

            <View
                android:layout_width="1dp"
                android:layout_marginVertical="10dp"
                android:layout_height="match_parent"
                android:background="@color/colorPrimaryDark"/>

            <Button
                style="?android:attr/borderlessButtonStyle"
                android:id="@+id/bt_select_height"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/select"
                android:textColor="@color/colorPrimaryDark"
                android:clickable="true"
                android:focusable="true"/>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>












</androidx.constraintlayout.widget.ConstraintLayout>