<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_title_chart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chart_title"
                android:textSize="23sp"
                android:layout_marginTop="20dp"
                android:layout_marginStart="30dp"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"
                />

            <com.github.mikephil.charting.charts.LineChart
                android:id="@+id/line_chart"
                android:layout_width="match_parent"
                android:layout_height="280dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:layout_marginBottom="20dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">

                <Button
                    android:background="@drawable/chart_button_back"
                    android:id="@+id/bt_type_chart"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="5dp"
                    android:gravity="center"
                    android:text="@string/chart_type"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:textColor="@android:color/white"
                    android:clickable="true"
                    android:focusable="true"/>

                <Button
                    android:background="@drawable/chart_button_back"
                    android:id="@+id/bt_term_chart"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="10dp"

                    android:text="@string/chart_term"
                    android:textStyle="bold"
                    android:textColor="@android:color/white"
                    android:textSize="15sp"
                    android:clickable="true"
                    android:focusable="true"/>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorPrimaryDark"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_chart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <ImageButton
        android:id="@+id/bt_add_list_chart"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="@android:color/transparent"
        android:scaleType="fitCenter"
        android:elevation="25dp"
        android:src="@drawable/icon_plus"
        android:visibility="visible" />
</FrameLayout>